--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Git & GitHub</h1>
     <h2>2504F</h2>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, impedit assumenda rem ipsa atque optio cupiditate mollitia exercitationem deleniti nisi magni explicabo, dolor ullam perferendis nesciunt sunt sequi animi minus?</p>
     <script src="script.js"></script>
 </body>
 </html>
